mudando estrutura do projeto para maven